2023-01-10  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/poke.c (set_script_args): Fix check for -L in argv.

2023-01-08  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-rt.pk (getenv): Avoid calling the `gettenv'
	instruction twice.

2023-01-08  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-rt.pk (_pkl_stroref): Make immutable.
	(_pkl_aoref): Likewise.
	(_pkl_aoref_complete): Likewise.

2023-01-08  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen-builtins.pks (builtin_iohandler): Remove.
	* libpoke/pkl-tab.y (builtin): Remove rule for BUILTIN_IOHANDLER.
	* libpoke/pkl-gen-builtins.pks (builtin_unsafe_string_set): Remove.
	* libpoke/pkl-tab.y (builtin): Remove rule for BUILTIN_UNSAFE_STRING_SET.
	* libpoke/pkl-ast.h (PKL_AST_BUILTIN_GETENV): Remove.
	* libpoke/pkl-gen.c (pkl_gen_ps_comp_stmt): Remove case for
	PKL_AST_BUILTIN_GETENV.
	* libpoke/pkl-lex.l: Remove rule for __PKL_BUILTIN_GETENV__.
	* libpoke/pkl-tab.y (builtin): Remove rule for BUILTIN_GETENV.
	* libpoke/pkl-gen-builtins.pks (builtin_getenv): Remove.
	* libpoke/pkl-rt.pk (getenv): Rewrite as a normal function.

2023-01-08  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.cmd/sdiff-2.pk: Adapt to new value printing.
	* testsuite/poke.cmd/sdiff-3.pk: Likewise.
	* testsuite/poke.cmd/sdiff-4.pk: Likewise.
	* testsuite/poke.cmd/sdiff-8.pk: Likewise.
	* testsuite/poke.cmd/sdiff-1.pk: Run sdiff with :values 0.
	* testsuite/poke.cmd/sdiff-5.pk: Likewise.
	* testsuite/poke.cmd/sdiff-6.pk: Likewise.
	* testsuite/poke.cmd/sdiff-7.pk: Likewise.
	* testsuite/poke.cmd/sdiff-10.pk: Likewise.
	* testsuite/poke.cmd/sdiff-12.pk: Likewise.

2023-01-08  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/diff.pk (format_value): Remove function.
	Use regular `format' for `any' values.

2023-01-08  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-ast.h (PKL_AST_BUILTIN_CLOSE): Remove.
	* libpoke/pkl-gen.c (pkl_gen_ps_comp_stmt): Remove case for
	PKL_AST_BUILTIN_CLOSE.